# bebop2_toolbox

./: .gitignore  README.md
bebop2_ground_control/: CMakeLists.txt  ground_control_node.cpp  package.xml
bebop2_ground_control/launch/: ground_control_node_1.launch  ground_control_node_2.launch  ground_control_node_3.launch  ground_control_node_4.launch  ground_control_node_multiple.launch  ground_control_node_sphinx.launch  joystick_node.launch
bebop2_ground_control/nodes/: ground_control_node.cpp
bebop2_identification/: CMakeLists.txt  bebop_identifier_airdrag_x.cpp  bebop_identifier_pitch.cpp  bebop_identifier_roll.cpp  bebop_identifier_vertical_speed.cpp  bebop_identifier_yaw_speed.cpp  package.xml  param.txt
bebop2_identification/identification_data/: airdrag_x.bag  airdrag_x.m  airdrag_y.bag  airdrag_y.m  monster_pitch_sys.m  monster_pitch_trn.bag  monster_pitch_tst.bag  monster_roll_sys.m  monster_roll_trn.bag  monster_roll_tst.bag  monster_vert_sys.m  monster_vert_sys.m~  monster_vert_trn.bag  monster_vert_tst.bag  monster_yaw_trn.bag  monster_yaw_tst.bag  monster_yawr_sys.m  monster_yawr_sys.m~  pitch_sys.m  pitch_trn.bag  pitch_tst.bag  record.sh  roll_sys.m  roll_trn.bag  roll_tst.bag  test.bag  vert_sys.m  vert_trn.bag  vert_trn15.bag  vert_tst.bag  vert_tst15.bag  vert_w_trn.bag  vert_w_tst.bag  yaw_trn.bag  yaw_tst.bag  yawr_sys.m
bebop2_identification/identification_data/10Hz/: pitch_1.bag  pitch_1.m  pitch_1.mat  pitch_2.bag  pitch_2.m  pitch_2.mat
bebop2_identification/identification_data/20Hz/: mpc_eight.m  mpc_square.m  pitch_1.bag  pitch_1.m  pitch_2.bag  pitch_2.m  roll_1.bag  roll_1.m  roll_2.bag  roll_2.m  vz_1.bag  vz_1.m  vz_1.mat  vz_2.bag  vz_2.m  vz_2.mat  yaw_1.bag  yaw_1.m  yaw_2.bag  yaw_2.m
bebop2_identification/identification_data/20Hz/bebop_data/: mpc_eight.mat  mpc_square.mat  pitch_1.mat  pitch_2.mat  roll_1.mat  roll_2.mat  vz_1.mat  vz_2.mat  yaw_1.mat  yaw_2.mat
bebop2_identification/identification_result/: plot_3d_obj.m  results.txt  test.m  test_with_yaw.m  test_z_accel.m  vert_sys.m~
bebop2_identification/launch/: bebop_identifier_pitch.launch  bebop_identifier_pitch_1.launch  bebop_identifier_roll.launch  bebop_identifier_roll_1.launch  bebop_identifier_vz.launch  bebop_identifier_vz_1.launch  bebop_identifier_yaw.launch  bebop_identifier_yaw_1.launch
bebop2_identification/nodes/: bebop_identifier_airdrag_x.cpp  bebop_identifier_airdrag_y.cpp  bebop_identifier_pitch.cpp  bebop_identifier_pitch_node.cpp  bebop_identifier_roll.cpp  bebop_identifier_roll_node.cpp  bebop_identifier_vertical_speed.cpp  bebop_identifier_vz_node.cpp  bebop_identifier_yaw_node.cpp  bebop_identifier_yaw_speed.cpp
bebop2_linear_mpc/: CMakeLists.txt  bebop2_linear_mpc_node.cpp  linear_mpc_node.cpp  package.xml
bebop2_linear_mpc/launch/: linear_mpc_node_4.launch  linear_mpc_sphinx.launch
bebop2_msgs/: CMakeLists.txt  package (conflicted copy 2019-04-24 153245).xml  package.xml
bebop2_msgs/msg/: FullStateWithCovariance.msg  FullStateWithCovarianceStamped.msg
bebop2_nonlinear_mpc/: CMakeLists (conflicted copy 2019-06-06 132038).txt  CMakeLists.txt  package.xml  setup.py
bebop2_nonlinear_mpc/include/bebop2_nonlinear_mpc/: single_mpc.h
bebop2_nonlinear_mpc/launch/: nmpc_control_node_1.launch  nmpc_control_node_2.launch  nmpc_control_node_3.launch  nmpc_control_node_4.launch  nmpc_control_node_assil_demo.launch  nmpc_control_node_multiple.launch  nonlinear_mpc.launch
bebop2_nonlinear_mpc/scripts/: bebop_nmpc_casadi_nlp_solver.c  bebop_nmpc_node.py  bebop_nmpc_obj.py  bebop_nmpc_solver.py
bebop2_nonlinear_mpc/single_mpc_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c
bebop2_nonlinear_mpc/src/: single_mpc (conflicted copy 2019-06-06 132128).cpp  single_mpc.cpp  single_mpc_node.cpp
bebop2_sphinx/: CMakeLists.txt  package.xml
bebop2_sphinx/drones/: bebop2_dev.drone  bebop2_enx1062ebf25c3c.drone  bebop2_eth0.drone  bebop2_wlp0s20f3.drone
bebop2_sphinx/launch/: sphinx_data_logger.launch
bebop2_sphinx/nodes/: sphinx_data_logger.cpp  sphinx_data_logger_node.cpp
bebop2_sphinx/scripts/: Land.sh  Random_Reset.sh  Reset.sh  Start.sh  Takeoff.sh  test.sh
bebop2_sphinx/worlds/: empty.world  outdoor_1.world  outdoor_2.world  outdoor_3.world  outdoor_4.world  outdoor_5.world
bebop2_state_estimator/: CMakeLists.txt  README.md  package.xml
bebop2_state_estimator/config/: bebop_1.yaml
bebop2_state_estimator/include/bebop2_state_estimator/: full_state_kalman_filter.h  position_velocity_orientation_filter.h
bebop2_state_estimator/launch/: full_state_estimator.launch  full_state_estimator_1.launch  full_state_estimator_multiple.launch  position_velocity_orientation_estimator.launch  position_velocity_orientation_estimator_1.launch  position_velocity_orientation_estimator_multiple.launch
bebop2_state_estimator/nodes/: full_state_kalman_filter_node.cpp  position_velocity_orientation_filter_node.cpp
bebop2_state_estimator/src/: full_state_kalman_filter.cpp  position_velocity_orientation_filter.cpp
bebop2_toolbox/: CHANGELOG.rst  CMakeLists.txt  package.xml
