<?xml version="1.0"?>
<package format="2">
  <name>bebop2_linear_mpc</name>
  <version>0.0.0</version>
  <description>The bebop2_linear_mpc package</description>

  <maintainer email="jiahao@todo.todo">jiahao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


</package>
