<?xml version="1.0"?>
<package>
  <name>bebop2_msgs</name>
  <version>0.1.0</version>
  <description>The bebop2_msgs package</description>

  <author email="h.zhu@tudelft.nl">Hai Zhu</author>
  <maintainer email="h.zhu@tudelft.nl">Hai Zhu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
