<?xml version="1.0"?>
<package format="2">
  <name>bebop2_nonlinear_mpc</name>
  <version>0.0.1</version>
  <description>The bebop2_nonlinear_mpc package</description>

  <maintainer email="hai@todo.todo">hai</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>

</package>
